--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 
+CLOUD_NAME=dveo8ezlx
+CLOUD_API_KEY=835829344679558
+CLOUD_API_SECRET=AW-0kAApWY-eKBZHT277j9LPgVk
+
+ATLASDB_URL=mongodb+srv://sambhav:Sambhav1@wander.objauxi.mongodb.net/?retryWrites=true&w=majority&appName=Wander
+
